--- a/carta.html
+++ b/carta.html
@@ -21,13 +21,29 @@
 <h1>CARTA</h1>
 <object class="pdf" data="MENÚ ESTACIÓN VILLA CRESPO.pdf" width="70%" height="1000px">
 </object>
+<article class ="cocineros">
+    <div>
+        <img src="img/cocinero1.png" alt="cocinero">
+        <h2>Julián Bertucci</h2>
+        <p>Julián es el jefe de cocina en Estación Villa Crespo. Con más de 15 años de experiencia, ha perfeccionado el arte del fuego lento y los puntos exactos de cocción. En 2022, recibió el Premio Nacional al Mejor Parrillero y fue invitado como jurado en el Festival Internacional del Asado en Córdoba. Su técnica con el bife de chorizo es legendaria.</p>
+    </div>
+    <div>
+        <img src="img/cocinero2.png" alt="cocinero">
+        <h2>Malik Nsue</h2>
+        <p>Originario de Santiago del Estero, Malik se ha convertido en una figura clave en la escena del asado gourmet del norte argentino. Su enfoque combina tradición y creatividad, destacándose por sus ahumados a baja temperatura y su salsa criolla especiada. En 2023, ganó el Gran Fuego de Oro en la competencia Parrilleros del Norte y ha sido destacado por La Nación como “el chef que está revolucionando la parrilla con identidad afroargentina”.</p>
+    </div>
+    <div>
+        <img src="img/cocinero3.png" alt="cocinero">
+        <h2>Tomás Becker</h2>
+        <p>Formado en Berlín, Thomas fusiona técnicas alemanas de curado con cortes argentinos. Su estilo limpio, preciso y lleno de carácter lo llevó a ganar el Premio a la Innovación en la Parrilla por Revista Gula en 2021. Es chef ejecutivo de Fuego Patagónico, un restaurante de cocina a las brasas con enfoque de sustentabilidad, donde lidera un equipo multicultural con énfasis en la trazabilidad de los ingredientes.</p>
+    </div>
+</article>
     <footer>
     <a href="index.html"> <img src="img/logonegro.png" width="12%" alt="Foto"></a>
     <section>
         <article>
     <img src="img/instagram.png" class="instagram" width="20%" height="auto" alt="Foto">
     <h6>Instagram</h6>
-    <!-- target="_blank" = ChatGPT. Función: Abrir una pestaña nueva al tocar el hipervinculo -->
     <p><a href="https://www.instagram.com/estacionvillacrespo/" target="_blank">@estacionvillacrespo</a></p>
         </article>
         <article>
