--- a/reseñas.html
+++ b/reseñas.html
@@ -18,7 +18,6 @@
         </ul>
     </nav>
 </header>
-
     <h1>RESEÑAS</h1>
     <div>
     <hr style="border-radius: 10px; height: 20px;; background-color: #f8b400; width: 20%;">
@@ -30,7 +29,7 @@
 <section class ="puntaje">
 <div><h1>4.6</h1><h4>4.103 reseñas</h4></div>
 </section>    
-<form action ="reseñaexitosa.html" method="get">
+<form action ="reseñaexitosa.html" method="get" class="reseña">
     <h3>Puntuá Estación Villa Crespo:</h3>
     <div class="stars">
           <input type="radio" id="star5" name="rating" value="5" />
